# xacc

./: .gitmodules  CMakeLists.txt
plugins/: CMakeLists.txt
plugins/dwave/: CMakeLists.txt
plugins/dwave/accelerator/: CMakeLists.txt
plugins/dwave/compiler/: CMakeLists.txt  DWQMICompiler.cpp
plugins/dwave/tests/: CMakeLists.txt
plugins/ibm/: CMakeLists.txt
plugins/ibm/accelerator/: CMakeLists.txt
plugins/ibm/compiler/: CMakeLists.txt
plugins/projectq/: CMakeLists.txt
plugins/projectq/compiler/: CMakeLists.txt
plugins/projectq/tests/: CMakeLists.txt
plugins/rigetti/: CMakeLists.txt
plugins/rigetti/accelerator/: CMakeLists.txt
plugins/rigetti/compiler/: CMakeLists.txt
plugins/vqe/: CMakeLists.txt
plugins/vqe/compiler/: CMakeLists.txt
plugins/vqe/decorators/: CMakeLists.txt
plugins/vqe/ir/: CMakeLists.txt  VQEIRActivator.cpp
plugins/vqe/mpi/: CMakeLists.txt
plugins/vqe/mpi/no-mpi/: CMakeLists.txt
plugins/vqe/python/: CMakeLists.txt
plugins/vqe/task/: CMakeLists.txt  VQETaskActivator.cpp
plugins/vqe/transformations/: CMakeLists.txt  VQEIRTransformationActivator.cpp
python/: xacc.py
python/compiler/tests/: PyXACCCompilerTester.cpp
xacc/: CMakeLists.txt
