add_xacc_test(DWAccelerator)
target_link_libraries(DWAcceleratorTester xacc-dwave-accelerator gtest)
add_xacc_test(DWQMICompiler)
target_link_libraries(DWQMICompilerTester xacc-dwave-qmicompiler gtest)
add_xacc_test(AnnealScheduleGenerator)
target_link_libraries(AnnealScheduleGeneratorTester xacc-dwave-qmicompiler gtest)